# base directory
set(APP_GPR_TOOLS_BASE_DIR ${CMAKE_CURRENT_SOURCE_DIR})

# source files
set(APP_GPR_TOOLS_SRC_FILES
  ${CMAKE_CURRENT_SOURCE_DIR}/gpr_parse_utils.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/gpr_print_utils.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/main_c.c
)

# include files
set(APP_GPR_TOOLS_INC_FILES
  ${CMAKE_CURRENT_SOURCE_DIR}/gpr_parse_utils.h
  ${CMAKE_CURRENT_SOURCE_DIR}/gpr_print_utils.h
  ${CMAKE_CURRENT_SOURCE_DIR}/main_c.h
  ${CMAKE_CURRENT_SOURCE_DIR}/stdcpp_utils.h
)

# include directories
set(APP_GPR_TOOLS_INCLUDE_DIRS
  ${CMAKE_CURRENT_SOURCE_DIR}
)

# link
set(APP_GPR_TOOLS_LIBRARIES gpr)

# define
set(APP_GPR_TOOLS_DEFINE)

# add executable
set(SRC ${APP_GPR_TOOLS_SRC_FILES} ${LIB_ARGUMENT_PARSER_SRC_FILES} ${LIB_CJSON_SRC_FILES})
set(HDR ${APP_GPR_TOOLS_INC_FILES} ${LIB_ARGUMENT_PARSER_INC_FILES} ${LIB_CJSON_INC_FILES})
set(LIB ${APP_GPR_TOOLS_LIBRARIES} ${LIB_ARGUMENT_PARSER_LIBRARIES} ${LIB_CJSON_LIBRARIES})
set(DEF ${APP_GPR_TOOLS_DEFINE} ${LIB_ARGUMENT_PARSER_DEFINE} ${LIB_CJSON_DEFINE} ${LIB_GPR_DEFINE})
set(INC ${APP_GPR_TOOLS_INCLUDE_DIRS} ${LIB_ARGUMENT_PARSER_INCLUDE_DIRS} ${LIB_CJSON_INCLUDE_DIRS} ${LIB_GPR_INCLUDE_DIRS} ${LIB_COMMON_INCLUDE_DIRS} ${LIB_DNG_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/../common ${LIB_TJPG_INCLUDE_DIRS})

add_executable(gpr_tools ${SRC} ${HDR})
target_link_libraries(gpr_tools ${LIB})
target_compile_definitions(gpr_tools PRIVATE ${DEF})
target_include_directories(gpr_tools PRIVATE ${INC})
install(TARGETS gpr_tools)
