# base directory
set(LIB_GPR_BASE_DIR ${CMAKE_CURRENT_SOURCE_DIR})

# source files
set(LIB_GPR_SRC_FILES
  ${CMAKE_CURRENT_SOURCE_DIR}/private/gpr.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/private/gpr_exif_info.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/private/gpr_image_writer.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/private/gpr_profile_info.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/private/gpr_read_image.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/private/gpr_tuning_info.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/private/gpr_utils.cpp
)

# include files
set(LIB_GPR_INC_FILES
  ${CMAKE_CURRENT_SOURCE_DIR}/private/gpr_image_writer.h
  ${CMAKE_CURRENT_SOURCE_DIR}/private/gpr_read_image.h
  ${CMAKE_CURRENT_SOURCE_DIR}/private/gpr_utils.h
  ${CMAKE_CURRENT_SOURCE_DIR}/public/gpr.h
  ${CMAKE_CURRENT_SOURCE_DIR}/public/gpr_exif_info.h
  ${CMAKE_CURRENT_SOURCE_DIR}/public/gpr_profile_info.h
  ${CMAKE_CURRENT_SOURCE_DIR}/public/gpr_tuning_info.h
)

# include directories
set(LIB_GPR_INCLUDE_DIRS
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}/public
)

# link
set(LIB_GPR_LIBRARIES
)

# define
set(LIB_GPR_DEFINE
)

set(SRC ${LIB_GPR_SRC_FILES} ${LIB_COMMON_SRC_FILES} ${LIB_DNG_SRC_FILES} ${LIB_EXPAT_SRC_FILES} ${LIB_TJPG_SRC_FILES} ${LIB_VC5_COMMON_SRC_FILES} ${LIB_VC5_DECODER_SRC_FILES} ${LIB_VC5_ENCODER_SRC_FILES} ${LIB_XMP_CORE_SRC_FILES} ${LIB_ZLIB_SRC_FILES})
set(HDR ${LIB_GPR_INC_FILES} ${LIB_COMMON_INC_FILES} ${LIB_DNG_INC_FILES} ${LIB_EXPAT_INC_FILES} ${LIB_TJPG_INC_FILES} ${LIB_VC5_COMMON_INC_FILES} ${LIB_VC5_DECODER_INC_FILES} ${LIB_VC5_ENCODER_INC_FILES} ${LIB_XMP_CORE_INC_FILES} ${LIB_ZLIB_INC_FILES})
set(LIB ${LIB_GPR_LIBRARIES} ${LIB_COMMON_LIBRARIES} ${LIB_DNG_LIBRARIES} ${LIB_EXPAT_LIBRARIES} ${LIB_TJPG_LIBRARIES} ${LIB_VC5_COMMON_LIBRARIES} ${LIB_VC5_DECODER_LIBRARIES} ${LIB_VC5_ENCODER_LIBRARIES} ${LIB_XMP_CORE_LIBRARIES} ${LIB_ZLIB_LIBRARIES})
set(DEF ${LIB_GPR_DEFINE} ${LIB_COMMON_DEFINE} ${LIB_DNG_DEFINE} ${LIB_EXPAT_DEFINE} ${LIB_TJPG_DEFINE} ${LIB_VC5_COMMON_DEFINE} ${LIB_VC5_DECODER_DEFINE} ${LIB_VC5_ENCODER_DEFINE} ${LIB_XMP_CORE_DEFINE} ${LIB_ZLIB_DEFINE})
set(INC ${LIB_GPR_INCLUDE_DIRS} ${LIB_COMMON_INCLUDE_DIRS} ${LIB_DNG_INCLUDE_DIRS} ${LIB_EXPAT_INCLUDE_DIRS} ${LIB_TJPG_INCLUDE_DIRS} ${LIB_VC5_COMMON_INCLUDE_DIRS} ${LIB_VC5_DECODER_INCLUDE_DIRS} ${LIB_VC5_ENCODER_INCLUDE_DIRS} ${LIB_XMP_CORE_INCLUDE_DIRS} ${LIB_ZLIB_INCLUDE_DIRS})

add_library(gpr STATIC ${SRC} ${HDR})
target_link_libraries(gpr ${LIB})
target_compile_definitions(gpr PRIVATE ${DEF})
target_include_directories(gpr PRIVATE ${INC})

set(LIB_GPR_INCLUDE_DIRS
  ${CMAKE_CURRENT_SOURCE_DIR}/public
  PARENT_SCOPE)

install(TARGETS gpr)
install(FILES
  ${CMAKE_CURRENT_SOURCE_DIR}/public/gpr.h
  ${CMAKE_CURRENT_SOURCE_DIR}/public/gpr_exif_info.h
  ${CMAKE_CURRENT_SOURCE_DIR}/public/gpr_profile_info.h
  ${CMAKE_CURRENT_SOURCE_DIR}/public/gpr_tuning_info.h
  ${CMAKE_CURRENT_SOURCE_DIR}/private/gpr_read_image.h
  DESTINATION include/gpr)
